# scout

./: Dockerfile  README.md  package-lock.json  package.json
client/: index.html  package-lock.json  package.json  vite.config.js
client/src/: App.css  App.jsx  index.css
client/src/components/: FileUploader.jsx  LanguageToggle.jsx  ThemeToggle.jsx
client/src/context/: LanguageContext.jsx
client/src/hooks/: useTheme.js
client/src/modules/adhd/: AdhdAssessment.jsx  adhd.jsx
client/src/modules/adhd/components/: FocusTest.jsx  MotorStabilityTest.jsx  ResultsDisplay.jsx  WorkingMemoryTest.jsx
client/src/modules/dyscalculia/: ResultsScreen.css  ResultsScreen.jsx  dyscalculia.jsx
client/src/modules/dyscalculia/state/: gameState.js
client/src/modules/dysgraphia/: dysgraphia.jsx
client/src/modules/dyslexia/: dyslexia.jsx
client/src/modules/dyspraxia/: dyspraxia.jsx
client/src/modules/parent-quiz/: ParentQuiz.jsx
client/src/modules/quiz/: Quiz.jsx
client/src/translations/: translations.js
server/: .env.example  .gitignore  pyproject.toml
server/app/: main.py
server/app/routers/adhd/: README.md  __init__.py  router.py
server/app/routers/discalculia/: __init__.py
server/app/routers/dyscalculia/: ai_services.py  analysis.py  dbn_classifier.py  explanation.py  models.py  routes.py  storage.py
server/app/routers/dysgraphia/: __init__.py  predict_gemini.py
server/app/routers/dyslexia/: __init__.py  predict_gemini.py  reading_router.py
server/app/routers/quiz/: routes.py
server/server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+15 files in other folders)
