[project]
name = "server"
version = "0.1.0"
description = "SamasyaAI Scout - Neuro-Cognitive Assessment Platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"uvicorn[standard]",
	"fastapi[standard]",
	"google-genai>=1.59.0",
	"pydantic>=2.12.5",
	"pillow>=12.0.0",
	"numpy>=1.24.0",
	"markdown>=3.5.0",
]
